--- a/upgrade_analysis/wizards/view_upgrade_install_wizard.xml
+++ b/upgrade_analysis/wizards/view_upgrade_install_wizard.xml
@@ -5,22 +5,61 @@
         <field name="model">upgrade.install.wizard</field>
         <field name="arch" type="xml">
             <form>
-                <field name="state" invisible="1" />
-                <group states="init" colspan="4">
+                <field name="state" />
+                <group states="draft">
                     <p
-                    >This will install all modules on the database. Do not continue if you use this database in production.</p>
-                    <field name="to_install" />
+                        class="alert alert-warning"
+                        role="alert"
+                    >This will install the selected modules on the database. Do not continue if you use this database in production.</p>
                 </group>
-                <group states="ready" colspan="4">
-                    <p>Modules installed</p>
+                <group states="done">
+                    <p
+                        class="alert alert-info"
+                        role="alert"
+                    >The modules have been installed successfuly</p>
+                </group>
+                <group col="5" states="draft">
+                    <button
+                        name="select_installable_modules"
+                        type="object"
+                        string="All Modules"
+                    />
+                    <button
+                        name="select_odoo_modules"
+                        type="object"
+                        string="All Odoo SA Modules (OpenUpgrade)"
+                    />
+                    <button
+                        name="select_oca_modules"
+                        type="object"
+                        string="All OCA Modules"
+                    />
+                    <button
+                        name="select_other_modules"
+                        type="object"
+                        string="All Other Modules"
+                    />
+                    <button
+                        name="unselect_modules"
+                        type="object"
+                        string="Clear the list"
+                    />
+                </group>
+                <group states="draft">
+                    <field name="module_qty" />
+                    <field
+                        name="module_ids"
+                        widget="many2many_tags"
+                        options="{'no_create': True}"
+                    />
                 </group>
                 <footer>
                     <button
-                        class="btn-primary"
-                        string="Continue"
-                        name="install_all"
+                        name="install_modules"
                         type="object"
-                        states="init"
+                        class="btn-primary"
+                        string="Install Modules"
+                        states="draft"
                     />
                     <button special="cancel" string="Close" class="btn-default" />
                 </footer>
@@ -29,7 +68,7 @@
     </record>
 
     <record id="action_upgrade_install_wizard" model="ir.actions.act_window">
-        <field name="name">Install Modules</field>
+        <field name="name">Install Modules Wizard</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">upgrade.install.wizard</field>
         <field name="view_mode">form,tree</field>
@@ -37,7 +76,7 @@
     </record>
 
     <menuitem
-        name="Install  Modules"
+        name="Install Modules Wizard"
         id="menu_upgrade_install"
         parent="menu_upgrade"
         action="action_upgrade_install_wizard"
