--- a/upgrade_analysis/views/view_upgrade_comparison_config.xml
+++ b/upgrade_analysis/views/view_upgrade_comparison_config.xml
@@ -17,39 +17,48 @@
         <field name="model">upgrade.comparison.config</field>
         <field name="arch" type="xml">
             <form>
-                <group>
-                    <field name="name" />
-                    <field name="server" />
-                    <field name="port" />
-                    <field name="database" />
-                    <field name="username" />
-                    <field name="password" />
-                </group>
-                <button
-                    name="test_connection"
-                    string="Test Connection"
-                    type="object"
-                    icon="fa-television"
-                    colspan="2"
-                />
-                <newline />
-                <button
-                    name="install_modules"
-                    string="Mark uninstalled modules as in remote DB for installation, needs manual review and installation"
-                    type="object"
-                    icon="fa-cogs"
-                    colspan="4"
-                />
-                <newline />
-                <button
-                    name="analyze"
-                    string="Perform Analysis"
-                    type="object"
-                    icon="fa-cogs"
-                    colspan="2"
-                />
-                <separator string="Last log" colspan="4" />
-                <field name="last_log" nolabel="1" colspan="4" />
+                <header>
+                </header>
+                <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button
+                            name="action_show_analysis"
+                            type="object"
+                            class="oe_stat_button"
+                            icon="fa-users"
+                        >
+                            <field
+                                string="Analyses"
+                                name="analysis_qty"
+                                widget="statinfo"
+                            />
+                        </button>
+                    </div>
+                    <group>
+                        <field name="name" />
+                        <field name="server" />
+                        <field name="port" />
+                        <field name="database" />
+                        <field name="username" />
+                        <field name="password" />
+                        <field name="version" />
+                    </group>
+                    <button
+                        name="test_connection"
+                        string="Test Connection"
+                        type="object"
+                        icon="fa-television"
+                        colspan="2"
+                    />
+                    <newline />
+                    <button
+                        name="new_analysis"
+                        string="New Analysis"
+                        type="object"
+                        icon="fa-cogs"
+                        colspan="2"
+                    />
+                </sheet>
             </form>
         </field>
     </record>
