--- a/upgrade_analysis/wizards/view_upgrade_generate_record_wizard.xml
+++ b/upgrade_analysis/wizards/view_upgrade_generate_record_wizard.xml
@@ -4,13 +4,15 @@
     <record id="view_upgrade_generate_record_wizard_form" model="ir.ui.view">
         <field name="model">upgrade.generate.record.wizard</field>
         <field name="arch" type="xml">
-            <form string="upgrade Generate Record Wizard">
-                <field name="state" invisible="1" />
-                <group states="init" colspan="4">
+            <form>
+                <header>
+                  <field name="state" widget="statusbar" />
+                </header>
+                <group states="draft" colspan="4">
                     <p
                     >This will reinitialize all the modules installed on this database. Do not continue if you use this database in production.</p>
                 </group>
-                <group states="ready" colspan="4">
+                <group states="done" colspan="4">
                     <p>Modules initialized and record created</p>
                 </group>
                 <footer>
@@ -18,7 +20,7 @@
                         string="Continue"
                         name="generate"
                         type="object"
-                        states="init"
+                        states="draft"
                         class="btn-primary"
                     />
                     <button special="cancel" string="Close" class="btn-default" />
