--- a/upgrade_analysis/views/view_upgrade_analysis.xml
+++ b/upgrade_analysis/views/view_upgrade_analysis.xml
@@ -38,7 +38,7 @@
                         />
                         <field
                             name="upgrade_path"
-                            attrs="{'readonly': [('state', '=', 'done')], 'invisible': [('write_files', '=', False)]}"
+                            attrs="{'invisible': [('write_files', '=', False)]}"
                         />
                         <field
                             name="analysis_date"
