--- a/autovacuum_message_attachment/views/rule_vacuum.xml
+++ b/autovacuum_message_attachment/views/rule_vacuum.xml
@@ -34,14 +34,14 @@
                             string="Message Subtypes"
                             attrs="{'invisible': [('ttype', '!=', 'message')]}"
                         >
-                            <field name="message_subtype_ids" nolabel="1" />
+                            <field name="message_subtype_ids" nolabel="1" colspan="4" />
                         </group>
                         <group attrs="{'invisible': [('ttype', '!=', 'attachment')]}">
                             <field name="filename_pattern" />
                             <field name="inheriting_model" />
                         </group>
-                        <group string="Message Models">
-                            <field name="model_ids" nolabel="1" />
+                        <group string="Models">
+                            <field name="model_ids" nolabel="1" colspan="4" />
                         </group>
                         <group>
                             <field name="model_id" />
