[IMP] upgrade_analysis: black, isort

--- a/upgrade_analysis/views/view_upgrade_comparison_config.xml
+++ b/upgrade_analysis/views/view_upgrade_comparison_config.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-
     <record id="view_upgrade_comparison_config_tree" model="ir.ui.view">
         <field name="model">upgrade.comparison.config</field>
         <field name="arch" type="xml">
@@ -17,8 +16,7 @@
         <field name="model">upgrade.comparison.config</field>
         <field name="arch" type="xml">
             <form>
-                <header>
-                </header>
+                <header />
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button
@@ -75,5 +73,4 @@
         name="Comparison Configurations"
         parent="menu_upgrade"
     />
-
 </odoo>
