[MIG] rpc_helper: Migration to 18.0

--- a/rpc_helper/views/ir_model_views.xml
+++ b/rpc_helper/views/ir_model_views.xml
@@ -14,7 +14,7 @@
                     <field
                         name="rpc_config_edit"
                         groups="base.group_no_one"
-                        widget="ace"
+                        widget="code"
                     />
                 </page>
             </xpath>
